--- a/Backend/szakdolgozat/pom.xml
+++ b/Backend/szakdolgozat/pom.xml
@@ -8,10 +8,10 @@
 		<version>2.1.8.RELEASE</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>elte</groupId>
-	<artifactId>szakdolgozat</artifactId>
+	<groupId>hu.ELTE</groupId>
+	<artifactId>Szakdolgozat</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>szakdolgozat</name>
+	<name>Szakdolgozat</name>
 	<description>Demo project for Spring Boot</description>
 
 	<properties>
@@ -38,6 +38,11 @@
 			<groupId>com.h2database</groupId>
 			<artifactId>h2</artifactId>
 			<scope>runtime</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<optional>true</optional>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
