--- a/Backend/szakdolgozat/pom.xml
+++ b/Backend/szakdolgozat/pom.xml
@@ -49,6 +49,12 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+                <dependency>
+                    <groupId>com.microsoft.sqlserver</groupId>
+                    <artifactId>mssql-jdbc</artifactId>
+                    <version>7.4.1.jre11</version>
+                </dependency>
+
 	</dependencies>
 
 	<build>
