--- a/Backend/szakdolgozat/src/main/resources/application.properties
+++ b/Backend/szakdolgozat/src/main/resources/application.properties
@@ -1,10 +1,10 @@
-#spring.datasource.platform=h2
-#spring.h2.console.enabled=true
-#spring.h2.console.path=/h2
-#spring.datasource.url=jdbc:h2:mem:database
+spring.datasource.platform=h2
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2
+spring.datasource.url=jdbc:h2:mem:database
 
-spring.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
-spring.datasource.url=jdbc:sqlserver://localhost:1433;databaseName=Szakdolgozat
-spring.datasource.username=Admin
-spring.datasource.password=Admin
-spring.jpa.show-sql=true
+#spring.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
+#spring.datasource.url=jdbc:sqlserver://localhost:1433;databaseName=Szakdolgozat
+#spring.datasource.username=Admin
+#spring.datasource.password=Admin
+#spring.jpa.show-sql=true
