--- a/Frontend/Szakdolgozat/angular.json
+++ b/Frontend/Szakdolgozat/angular.json
@@ -46,6 +46,7 @@
               "src/assets"
             ],
             "styles": [
+              "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
               "src/styles.css",
               "node_modules/bootstrap/dist/css/bootstrap.min.css"
             ],
@@ -112,6 +113,7 @@
               "src/assets"
             ],
             "styles": [
+              "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
               "src/styles.css",
               "node_modules/bootstrap/dist/css/bootstrap.min.css"
             ],
@@ -144,6 +146,7 @@
           }
         }
       }
-    }},
+    }
+  },
   "defaultProject": "Szakdolgozat"
 }
