--- a/.travis.yml
+++ b/.travis.yml
@@ -11,12 +11,12 @@ jobs:
       script:
         - ./mvnw clean test -B
         
-    # - stage: backend
-    #   name: "backend test and build"
-    #   language: java
-    #   jdk: oraclejdk8
-    #   script:
-    #     - ./mvnw clean install -B
+    - stage: backend
+      name: "backend test and build"
+      language: java
+      jdk: oraclejdk8
+      script:
+        - ./mvnw clean install -B
 
     # - stage: frontend
     #   name: "frontend build"
