--- a/Backend/szakdolgozat/pom.xml
+++ b/Backend/szakdolgozat/pom.xml
@@ -80,6 +80,12 @@
             <type>jar</type>
         </dependency>
 
+        <dependency>
+            <groupId>org.apache.poi</groupId>
+            <artifactId>poi-ooxml</artifactId>
+            <version>3.17</version>
+        </dependency>
+
     </dependencies>
 
     <build>
