--- a/Frontend/Szakdolgozat/package.json
+++ b/Frontend/Szakdolgozat/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser-dynamic": "^8.2.14",
     "@angular/router": "^8.2.14",
     "bootstrap": "^4.4.1",
+    "file-saver": "^2.0.2",
     "generate": "^0.14.0",
     "hammerjs": "^2.0.8",
     "rxjs": "~6.4.0",
