--- a/Backend/szakdolgozat/src/main/resources/application.properties
+++ b/Backend/szakdolgozat/src/main/resources/application.properties
@@ -1,12 +1,10 @@
 server.port=8081
 
-spring.datasource.platform=h2
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2
-spring.datasource.url=jdbc:h2:mem:database
+spring.datasource.url=jdbc:mysql://localhost:3306/szakdolgozat
+spring.datasource.username=root
+spring.datasource.password=
 
-#spring.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
-#spring.datasource.url=jdbc:sqlserver://localhost:1433;databaseName=Szakdolgozat
-#spring.datasource.username=Admin
-#spring.datasource.password=Admin
-#spring.jpa.show-sql=true
+#spring.datasource.platform=h2
+#spring.h2.console.enabled=true
+#spring.h2.console.path=/h2
+#spring.datasource.url=jdbc:h2:mem:database
